--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
+server.port= 8081
+spring.datasource.url=jdbc:oracle:thin:@localhost:1522/FREEPDB1
 spring.datasource.username=SYSTEM
 spring.datasource.password=31875595
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
